--- a/style.css
+++ b/style.css
@@ -88,3 +88,9 @@ img {
 .next-btn:hover {
     background-color: #0056b3;
 }
+.extra-info {
+  margin-top: 20px;
+  font-size: 1em;
+  color: #333;
+}
+
